--- a/style.css
+++ b/style.css
@@ -1,27 +1,48 @@
 .color {
-	width: 100px;
-	height: 100px;
-	background-color: black;
-	margin: 10px;
+	width: 80%;
+	height: 80%;
+	margin: 5%;
 	}
+
 .color-info {
-	font-size: 15px;
+	font-size: 90%;
 }
+
 .main {
-	position: absolute;
+	display: inline-block;
+	width: 130px;
+	height:130px;
 }
+
 #colors {
-	position: relative;
 	width: 100%;
 	height: 100%;
 }
+
 .myButton {
-	background-color:#000;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:14px;
-	padding:16px 31px;
-	text-decoration:none;
+	background-color: #000;
+	width: 200px;
+	cursor: pointer;
+	color: #ffffff;
+	font-family: Arial;
+	font-size: 14px;
+	padding: 16px 31px;
+	text-decoration: none;
+	margin-right:auto;
+  margin-left:auto;
+	margin-top: 10px;
+	text-align: center;
+}
+
+#header {
+	background-color: #8D97A8;
+	width: 100%;
+	height: 110px;
+}
+
+#input {
+	width: 150px;
+	text-align: center;
+	margin-right:auto;
+  margin-left:auto;
 }
