--- a/style.css
+++ b/style.css
@@ -1,30 +1,30 @@
-#color {
-	width: 150px;
-	height: 150px;
-	background-color: black;
-	margin: 30px;
-	box-shadow: 0px 0px 30px 5px rgb(0,0,0);
-	}
 .title{
 	margin: 3px;
 	padding: 3px;
 }
 
-
-.myButton {
-	background-color:#000;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:14px;
-	padding:16px 31px;
-	text-decoration:none;
+.createButton {
+	background-color: #000;
+	display: inline-block;
+	cursor: pointer;
+	color: #ffffff;
+	font-family: Arial;
+	font-size: 14px;
+	padding: 16px 31px;
+	text-decoration: none;
+	-webkit-user-select: none; /* Safari */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* IE10+/Edge */
+	user-select: none; /* Standard */
 }
 
-.colors{
-	border:1px solid;
-	height: 100px;
-	float: right;
-
+#color-info {
+	text-align: center;
+	font-weight: bold;
+	padding: 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	color: white;
+	background-color: black;
+	box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.5);
 }
